fixed doc title issue of being squashed together on same line

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -792,7 +792,7 @@ nav.nav-main .button {
 }
 .docs-content .anchor {
   position: relative;
-  display: inline-block;
+  display: block;
 }
 .docs-content .anchor .header-link {
   width: 20px;
