--- a/static/css/sections/docs.styl
+++ b/static/css/sections/docs.styl
@@ -37,7 +37,7 @@
 
   .anchor
     position: relative
-    display: inline-block
+    display: block
 
     .header-link
       width: 20px
